OPHJOD-1545: Add lahde field to PolunVaihe entities and DTOs
Introduce the `PolunVaiheLahde` enum to distinguish creation types. Updated mappings, services, and tests to support the new field and ensure data consistency.